--- a/frontend/src/pages/LegalReports.css
+++ b/frontend/src/pages/LegalReports.css
@@ -3,6 +3,7 @@
   font-weight: 400;
   font-style: normal;
   padding: 75px 0px;
+  margin-top: 80px;
 }
 
 .legal-banner img {
@@ -157,7 +158,7 @@ table td {
 }
 
 /* ---- Each card ---- */
-.report-card {
+.lr-card {
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -173,7 +174,7 @@ table td {
 }
 
 /* ---- Circular image ---- */
-.report-image img,
+.lr-image img,
 .no-image {
   width: 180px;
   height: 180px;
@@ -274,7 +275,7 @@ table td {
     height: 400px;
   }
 
-  .report-image img,
+  .lr-image img,
   .no-image {
     width: 120px;
     height: 120px;
