--- a/frontend/src/pages/Stories.css
+++ b/frontend/src/pages/Stories.css
@@ -288,6 +288,13 @@
   .st-title span::after {
     left: 80px;
   }
+  .st-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .st-card {
+    width: 320px; 
+  }
 }
 
 @media (max-width: 768px) {
@@ -307,5 +314,13 @@
   }
   .st-title span::after {
     left: -10px;
+  }
+    .st-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .st-card {
+    width: 100%;
+    max-width: 362px;
   }
 }
